# htmd-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yaml  ci.yaml  release.yaml
bench/: .gitignore  README.md  bench.ts  bun.lockb  fetchBenchmarkPages.ts  package.json  pandocBatchCli.ts  turndownCli.ts
src/: cli_options.rs  config_util.rs  io_util.rs  main.rs  path_util.rs
tests/: cli-options.toml  mod.rs
tests/html/sub-folder2/: hello-3.html
